[package]
name = "cargo-member"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
description = "Cargo subcommand for managing workspace members."
readme = "README.md"
repository = "https://github.com/qryxip/cargo-member"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "cargo-subcommand"]
categories = ["development-tools", "development-tools::cargo-plugins"]
publish = false

[dependencies]
anyhow = "1.0.30"
atty = "0.2.14"
cargo_metadata = "0.10.0"
duct = "0.13.4"
easy-ext = "0.2.0"
env_logger = "0.7.1"
ignore = "0.4.15"
itertools = "0.9.0"
log = "0.4.8"
remove_dir_all = "0.5.2"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
shell-escape = "0.1.4"
structopt = "0.3.14"
strum = { version = "0.18.0", features = ["derive"] }
termcolor = "1.1.0"
toml = "0.5.6"
toml_edit = "0.1.5"
url = "2.1.1"

[dev-dependencies]
difference = "2.0.0"
tempdir = "0.3.7"
