[package]
name = "cargo-member"
version = "0.2.1"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
description = "Cargo subcommand for managing workspace members."
readme = "README.md"
repository = "https://github.com/qryxip/cargo-member"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "cargo-subcommand"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[dependencies]
anyhow = "1.0.32"
atty = "0.2.14"
cargo_metadata = "0.11.1"
duct = "0.13.4"
easy-ext = "0.2.2"
env_logger = "0.7.1"
ignore = "0.4.16"
itertools = "0.9.0"
log = "0.4.11"
remove_dir_all = "0.5.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
shell-escape = "0.1.5"
structopt = "0.3.15"
strum = { version = "0.18.0", features = ["derive"] }
termcolor = "1.1.0"
toml = "0.5.6"
toml_edit = "0.2.0"
url = "2.1.1"

[dev-dependencies]
difference = "2.0.0"
tempdir = "0.3.7"
