[package]
name = "cargo-member"
version = "0.2.1"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
description = "Cargo subcommand for managing workspace members."
readme = "README.md"
repository = "https://github.com/qryxip/cargo-member"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "cargo-subcommand"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"
cargo_metadata = "0.14.0"
duct = "0.13.5"
easy-ext = "1.0.0"
env_logger = "0.9.0"
ignore = "0.4.18"
itertools = "0.10.1"
log = "0.4.14"
remove_dir_all = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
shell-escape = "0.1.5"
structopt = "0.3.23"
strum = { version = "0.21.0", features = ["derive"] }
termcolor = "1.1.2"
toml = "0.5.8"
toml_edit = "0.3.1"
url = "2.2.2"

[dev-dependencies]
difference = "2.0.0"
tempdir = "0.3.7"
